--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -568,6 +568,7 @@ button {
   margin-top: 2px;
   background-repeat: no-repeat;
   background-size: 100% 100%;
+  background: #00a2a7;
 }
 .home-text-content h4 {
   font-weight: 400;
