learning details without carousel

--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -10223,7 +10223,11 @@ m .ra_courch_area .mu_dropdown_menu_content ul li:last-child img {
   margin: 0 20px;
 }
 /* End Home Page Css */
-
+.filterCard h2{
+  font-size: 18px;
+  color: #05233B;
+  font-weight: 300;
+}
 /* ====================================================================================================================================================
     ===========================                             *** END NEW PROJECT PAGES CSS ***                           ================================
     ==================================================================================================================================================== */
