homepage finished with responsive

--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -72,8 +72,8 @@ button {
   width: 18px;
   height: auto;
   position: absolute;
-  top: 10px;
-  right: 4px;
+  top: 6px;
+  right: 1px;
 }
 .all-p-humber {
   width: 30px;
@@ -103,9 +103,9 @@ button {
   -o-transition: 0.25s ease-in-out;
   transition: 0.25s ease-in-out;
 }
-.all-p-humber span:nth-child(1) {
+/* .all-p-humber span:nth-child(1) {
   top: 6px;
-}
+} */
 .all-p-humber span:nth-child(2),
 .all-p-humber span:nth-child(3) {
   top: 8px;
@@ -2489,10 +2489,9 @@ button {
   -webkit-transition: all 0.5s ease-in-out;
   -o-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
-  -webkit-transform: translate(0px, -100%) scale(0, 0);
-  -ms-transform: translate(0px, -100%) scale(0, 0);
-  transform: translate(0px, -100%) scale(0, 0);
-  opacity: 0;
+  -webkit-transform: translate(0px, 0px) scale(1, 1);
+  -ms-transform: translate(0px, 0px) scale(1, 1);
+  transform: translate(0px, 0px) scale(1, 1);
   /* -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; */
   z-index: 2;
 }
